--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -37,7 +37,7 @@
                             <th *ngIf="type === 'AML'">FLT3-ITD</th>
                             <th *ngIf="type === 'ALL'">IKZF1 deletion</th>
                             <th *ngIf="type === 'MDS'">Genetic test</th>
-                            <th *ngIf="type === 'LYN'">Bone marrow aspiralion analysis</th>
+                            <th *ngIf="type === 'LYM'">Bone marrow aspiralion analysis</th>
                             <th>Chromosomal analysis</th>
                         </tr>
                     </thead>
@@ -66,11 +66,12 @@
                             <td *ngIf="type === 'AML'">TARGET DISEASE: Acute myeloid leukemia</td>
                             <td *ngIf="type === 'ALL'">TARGET DISEASE: Acute lymphoblastic leukemia</td>
                             <td *ngIf="type === 'MDS'">TARGET DISEASE: MDS/MPN</td>
-                            <td *ngIf="type === 'LYN'">TARGET DISEASE: Lymphoma</td>
+                            <td *ngIf="type === 'LYM'">TARGET DISEASE: Lymphoma</td>
                             <td>METHODS: *Massivery parallel sequencing</td>
                         </tr>
                         <tr>
-                            <td>SPECIMEN: Genomic DNA isolated from {{specimenMsg}}</td>
+                            <td *ngIf="type === 'AML' || type === 'ALL'">SPECIMEN: Genomic DNA isolated from {{specimenMsg}}</td>
+                            <td *ngIf="type === 'MDS' || type === 'LYM'">SPECIMEN: Genomic DNA isolated from peripheral blood</td>
                             <td>REQUEST: {{patientInfo.request}}</td>
                         </tr>
                     </tbody>
