--- a/src/app/home/components/mainscreen/mainscreen.component.html
+++ b/src/app/home/components/mainscreen/mainscreen.component.html
@@ -60,7 +60,7 @@
           <thead>
             <tr>
               <th>No.</th>
-              <th>검사일</th>
+              <th>접수일</th>
               <th>환자이름</th>
               <th>나이</th>
               <th>성별</th>
