--- a/src/app/forms/form2/form2.component_old.html
+++ b/src/app/forms/form2/form2.component_old.html
@@ -225,7 +225,7 @@
                     <th>Sanger</th>
                     <th>Type</th>                  
                     <th>Gene</th>
-                    <th>Functional Impact</th>
+                    <th style="width: 150px !important;">Functional Impact</th>
                     <th>Transcript</th>
                     <th>Exon/Intron</th>  
                     <th>Nuceleotide change</th>    
@@ -249,7 +249,7 @@
                   <td><input type="text" size="10"  class="clr-input"  formControlName="sanger"></td>
                   <td><input type="text" size="10"  class="clr-input"  formControlName="type"></td>
                   <td><input type="text" size="10"  class="clr-input" formControlName="gene"></td>
-                  <td><input type="text" size="10"  class="clr-input" formControlName="functionalImpact"></td>
+                  <td style="width: 150px !important;"><input type="text" size="10"  class="clr-input" formControlName="functionalImpact"></td>
                   <td><input type="text" size="10"  class="clr-input" formControlName="transcript"></td> 
                   <td><input type="text" size="10"  class="clr-input" formControlName="exonIntro"></td>
                   <td><input type="text" size="10"  class="clr-input" formControlName="nucleotideChange"></td>
