--- a/src/app/byengri/byengri/report/report.component.scss
+++ b/src/app/byengri/byengri/report/report.component.scss
@@ -280,3 +280,19 @@ img:hover {
 rect {
   height: 40px !important;
 }
+
+.m-w-90 {
+  min-width: 90px;
+}
+
+.m-w-110 {
+  min-width: 110px;
+}
+
+.m-w-150 {
+  min-width: 150px;
+}
+
+.m-w-160 {
+  min-width: 160px;
+}
