change vusmsg in preview

--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -555,7 +555,7 @@
   <!--    -->
    <div class="modal-overlay" *ngIf="isVisible">
        <div class="modal-body">
-           <app-preview  [result]="resultStatus"
+           <app-preview  [result]="resultStatus" [vusmsg]="vusmsg"
         (closemodal)="previewToggle()"
            [type]="reportType"></app-preview>
        </div>
