--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -122,7 +122,7 @@
                       </table>
                     </div>
                     <div>
-                        <div  class="font_14 pd_t15" *ngIf="vusstatus">
+                        <div  class="font_14 pd_t15">
                             <textarea style="width:98%"class="textarea_01">{{vusmsg}}</textarea>
                           </div>
                       </div>
