--- a/src/app/forms/form4/form4.component.html
+++ b/src/app/forms/form4/form4.component.html
@@ -333,7 +333,7 @@
   <!-- -----------------------------------------------------------  -->
    <div class="modal-overlay" *ngIf="isVisible">
        <div class="modal-body">
-           <app-preview  [result]="resultStatus" 
+           <app-preview  [result]="resultStatus" [vusmsg]="vusmsg"
            (closemodal)="previewToggle()"
            [type]="reportType"></app-preview>
        </div>
