--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -356,18 +356,15 @@
                 formControlName="cosmicID"></td>
             
             <td  class="txt_c">
-              <select class="select_01" style="width: 100%;" name="options" (change)="saveInhouse(i, inhouse.value)" 
-              *ngIf="checkType(i)" #inhouse>
+              <select class="select_01" style="width: 100%;" name="options" (change)="saveInhouse(i, inhouse.value)"   #inhouse>
                 <option value="mutation" selected>Mutation</option>
                 <option value="artifacts">Artifacts</option>
                 <option value="benign">Benign</option>
               </select>                    
             </td>
-           <!-- <td  class="txt_c" (click)="save(i)" *ngIf="checkType(i)"  class="save_mute">
-               저장 -->
                <td>
-               <button class="btn-s blue"  (click)="save(i)" *ngIf="checkType(i)" >저장</button>
-               <!-- 작업후 td class="save_mute" 삭제해주세요 -->
+               <button class="btn-s blue"  (click)="save(i)"  >저장</button>
+               
             </td>
             </tr>                               
           </ng-container>
