--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -72,7 +72,7 @@
                             <label for="part" style="font-weight: 500;">업무</label>
                             <select class="form-select" id="part">
                                 <option value="D">의사</option>
-                                <option value="T">기사</option>
+                                <option value="T">임상병리사</option>
                             </select>
                         </div>
                         <div class="text-center">
