--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,11 +8,11 @@
       <div class="fr fb pd_r30 pd_t40">
           <span class="txt_01 title">가톨릭대학교 서울성모병원</span>
             
-          <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span> 
-          <a href="#"><img src="../images/btn_pw.png" alt="비밀번호변경" class="pd_l06"/> 
-          </a> -->
+          <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span>  -->
+           <img  [src]="'assets/images/btn_pw.png'" alt="비밀번호변경" class="pd_l06"  (click)="openDialog()"/> 
            <!-- <a href="#"><img [src]="'assets/images/btn_logout.png'" alt="로그아웃" /> -->
           <!-- </a></div> -->
+          &nbsp;&nbsp;&nbsp;
           <img [src]="'assets/images/btn_logout.png'" (click)="logout()" alt="로그아웃" class="btn-logout" />
       </div>
       <div id="menu">
