--- a/src/app/byengri/byengri/byengri.component.scss
+++ b/src/app/byengri/byengri/byengri.component.scss
@@ -15,3 +15,17 @@ img.btn-logout {
   display: inline-block;
   margin-right: 15px;
 }
+
+.btn__button {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #ff8533;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: white;
+  border: 1px solid #8d8888;
+  font-size: 3px;
+  border-radius: 3px;
+}
