--- a/src/app/inhouse/comments/comments.component.html
+++ b/src/app/inhouse/comments/comments.component.html
@@ -30,6 +30,10 @@
                             <li>
                                 <button type="button" class="btn btn_01" (click)="insertRow()" >추가</button>
                             </li>
+
+                            <li>
+                                <button type="button" class="btn btn_01" (click)="excelDownload()">Excel</button>
+                            </li>                            
                             <!--
                             <li>
                                 <button type="button" class="btn btn_01">저장</button>
