--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,8 @@
           <span class="txt_01 title">가톨릭대학교 서울성모병원</span>
             
           <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span>  -->
-           <img  [src]="'assets/images/btn_pw.png'" alt="비밀번호변경" class="pd_l06"  (click)="openDialog()"/> 
+          <!-- <img  [src]="'assets/images/btn_pw.png'" alt="비밀번호변경" class="pd_l06"  (click)="openDialog()"/>  -->
+          <button class="pd_106 btn-logout btn__button"  (click)="openDialog()">내정보</button>
            <!-- <a href="#"><img [src]="'assets/images/btn_logout.png'" alt="로그아웃" /> -->
           <!-- </a></div> -->
           &nbsp;&nbsp;&nbsp;
