--- a/src/app/byengri/upload/upload.component.html
+++ b/src/app/byengri/upload/upload.component.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           <!-- <ng-content></ng-content> -->
-          <div>           
+          <div class="mt-15">           
                 <button  class="btn btn-button" (click)="onConfirm()" [disabled]="uploadfileList.length < 3">확 인</button>&nbsp;&nbsp;&nbsp;               
                 <button  class="btn btn-button" (click)="onCancel()">취 소</button>             
           </div>
