--- a/src/app/byengri/byengri/byengri.component.html
+++ b/src/app/byengri/byengri/byengri.component.html
@@ -9,8 +9,8 @@
            <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span> -->
            <!-- <img [src]="'assets/images/btn_pw.png'" alt="비밀번호변경" class="pd_l06"  (click)="openDialog()"/> -->
            <button class="pd_106 btn-logout btn__button"  (click)="openDialog()">내정보</button>
-           &nbsp;&nbsp;&nbsp;
-           <img [src]="'assets/images/btn_logout.png'" (click)="logout()" alt="로그아웃" />
+           &nbsp;
+           <button class="btn__logout" (click)="logout()" alt="로그아웃" >로그아웃</button>
       </div>
       <div id="menu">
           <table border="0" cellspacing="0" cellpadding="0">
@@ -19,12 +19,14 @@
                     <a routerLink="/pathology" class="active nav-link" routerLinkActive="active"><span
                       class="nav-text"></span></a>
                   </td> 
+                <!----
                   <td class="menu04">
                     <a routerLink="/pathology/managestatistics"></a>
                   </td> 
                   <td class="menu06">
                     <a routerLink="/pathology/manageusers"></a>
                   </td> 
+                -->
               </tr>
           </table>
       </div>
