--- a/src/app/home/components/tsvupload/tsvupload.component.html
+++ b/src/app/home/components/tsvupload/tsvupload.component.html
@@ -11,7 +11,7 @@
                 [class.active]="true">
                 <input type="file" name="userfiles" #uploadfile
                 (change)="onSelectedFile($event)" multiple />
-                <h4>업로드할 파일을 선택하거나 <br />여기에 파일을 올려주세요.</h4>
+                <h4 style="font-size: 1rem; font-weight: bold;">업로드할 파일을 선택하거나 여기에 파일을 올려주세요.</h4>
               </div>
               <div class="mt-2" *ngIf="upload.progress > 0 && upload.progress != 100"  >
                 <div class="progress" style="height: 20px; margin-bottom: 20px;">
