--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,11 +10,11 @@
             
           <!-- <span class="txt_01">홍길동</span><span class="fn">님 반갑습니다.</span>  -->
           <!-- <img  [src]="'assets/images/btn_pw.png'" alt="비밀번호변경" class="pd_l06"  (click)="openDialog()"/>  -->
-          <button class="pd_106 btn-logout btn__button"  (click)="openDialog()">내정보</button>
-           <!-- <a href="#"><img [src]="'assets/images/btn_logout.png'" alt="로그아웃" /> -->
+          <!-- <button class="pd_106 btn-logout btn__button"  (click)="openDialog()">내정보</button> -->
+          <!-- <a href="#"><img [src]="'assets/images/btn_logout.png'" alt="로그아웃" /> -->
           <!-- </a></div> -->
-          &nbsp;&nbsp;&nbsp;
-          <img [src]="'assets/images/btn_logout.png'" (click)="logout()" alt="로그아웃" class="btn-logout" />
+          &nbsp;
+          <button (click)="logout()" class="btn__logout">로그아웃</button>
       </div>
       <div id="menu">
           <table border="0" cellspacing="0" cellpadding="0">
@@ -27,7 +27,7 @@
                     <a routerLink="/diag/benignComponent"><span class="nav-text"></span></a>
                      
                      <ul class="sub-menu"> 
-                      <li><span (click)="link('benign')">Benign</span></li>
+                      <!-- <li><span (click)="link('benign')">Benign</span></li> -->
                       <li><span (click)="link('artifacts')">Artifacts</span></li>
                       <li><span (click)="link('mutation')">Mutation</span></li>
                       <li><span (click)="link('comments')">Comments</span></li>
