--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,14 +14,33 @@ img.btn-logout {
 
 .btn__button {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 2px;
   color: #ff8533;
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: white;
-  border: 1px solid #8d8888;
-  font-size: 3px;
+  border: 1px solid #cacaca;
+  font-size: 10px;
   border-radius: 3px;
+  height: 18px;
+  line-height: .3;
+  width: 52px;
+}
+.btn__logout {
+  margin-top: 0;
+  margin-bottom: 2px;
+  color: #ff8533;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: white;
+  border: 1px solid #cacaca;
+  font-size: 10px;
+  border-radius: 3px;
+  height: 18px;
+  line-height: .3;
+  width: 60px;
 }
