--- a/src/app/inhouse/mutation/mutation.component.html
+++ b/src/app/inhouse/mutation/mutation.component.html
@@ -50,9 +50,15 @@
     </div>
     <div class="table-box-wrap">
         <div class="table-box box" style="overflow-x: auto;">         
-            <table border="0" cellpadding="0" cellspacing="0" class="header-fix table_list" style="min-width:2200px; width:100%">
+            <table border="0" cellpadding="0" cellspacing="0" class="header-fix table_list" style="min-width:2600px; width:100%">
             	<colgroup>
                     <col width="3%" />
+                    <col width="5%" />
+                    <col width="5%" />
+                    <col width="5%" />
+                    <col width="5%" />
+                    <col width="5%" />
+                    <col width="5%" />
                     <col width="5%" />
                     <col width="5%" />
                     <col width="5%" />
@@ -93,6 +99,12 @@
                         <th >COSMIC ID</th>
                         <th >SIFT/Polyphen/Mutation Taster</th>
                         <th >Buccal2</th>
+                        <th >ExAC</th>
+                        <th >ExAC_East_Asian</th>
+                        <th >KRGDB</th>
+                        <th >ETC1</th>
+                        <th >ETC2</th>
+                        <th >ETC3</th>
                         <th >Ivg</th>
                         <th >Sanger</th>
                         <th >수정/삭제</th>  
@@ -181,6 +193,18 @@
                                 <span class="clr-input" *ngIf="status.value === 'U'">
                                     <input type="text"  class="clr-input" value="{{list.buccal2}}" id="buccal2{{list.id}}"  > 
                                 </span> 
+                            </td>
+                            <td class="txt_c">
+                            </td>
+                            <td class="txt_c">
+                            </td>
+                            <td class="txt_c">
+                            </td>
+                            <td class="txt_c">
+                            </td>
+                            <td class="txt_c">
+                            </td>
+                            <td class="txt_c">
                             </td>
                             <td class="txt_c"><span *ngIf="status.value === 'R'">{{list.igv}}</span>
                                 <span class="clr-input" *ngIf="status.value === 'U'">
